# fastapi-blog

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: main.yaml
alembic/: env.py
alembic/versions/: 02f711263ca2_users.py  3b2d6ab400e6_create_post_table.py  53d1ce93f280_alembic_initialized.py  8e7a3af93bad_post.py  d79dc733ab75_create_post_table.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  posts.py  users.py
app/core/: config.py  security.py
app/db/: init_db.py  session.py
app/models/: post.py  user.py
app/schemas/: post.py  user.py
app/services/: base.py  crud.py  post_crud.py
