[project]
name = "blog"
version = "0.1.0"
description = "Simple blog app for learning FastAPI while building apps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.120.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.14",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "bleach>=6.2.0",
]
